<resources>
    <string name="app_name">Exercise App</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_profile">Profile</string>
    <string name="title_more">More</string>
    <string name="button_new_template">Create New Template</string>
    <string name="title_age">Age</string>
    <string name="title_height">Height</string>
    <string name="title_weight">Weight</string>
    <string name="title_about_me">About Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Create Account</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_height">Height (cm)</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_weight">Weight (kg)</string>
    <string name="prompt_date">Date of Birth</string>

    <!-- Delete in future -->
    <string name="action_sign_in_short">WTF 1</string>
    <string name="action_sign_in">WTF 2</string>



</resources>