<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/baseline_date_range_24"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_workouts"
        android:icon="@drawable/baseline_source_24"
        android:title="@string/title_workouts" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/baseline_trending_up_24"
        android:title="@string/title_statistics" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/baseline_more_horiz_24"
        android:title="@string/title_more" />

</menu>